--- a/starwars-opgave/src/Layout/Header/Header.module.scss
+++ b/starwars-opgave/src/Layout/Header/Header.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-bottom: 3px solid gray;
 
     img {
         height: 100px;
@@ -12,5 +13,6 @@
         display: flex;
         gap: 30px;
         list-style: none;
+        margin-bottom: 10px;
     }
 }
