--- a/starwars-opgave/src/Layout/Header/Header.module.scss
+++ b/starwars-opgave/src/Layout/Header/Header.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     border-bottom: 3px solid gray;
+    background-color: black;
 
     img {
         height: 100px;
