--- a/starwars-opgave/src/globals.css
+++ b/starwars-opgave/src/globals.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans MT';
     color: white;
 }
 
@@ -11,4 +11,5 @@ body {
     max-width: 1000px;
     margin: auto;
     min-height: 100vh;
+    background-color: #202020;
 }
