--- a/starwars-opgave/src/Layout/Header/Header.module.scss
+++ b/starwars-opgave/src/Layout/Header/Header.module.scss
@@ -15,5 +15,10 @@
         gap: 30px;
         list-style: none;
         margin-bottom: 10px;
+
+        a {
+            text-decoration: none;
+            border-bottom: 2px solid white;
+        }
     }
 }
