--- a/starwars-opgave/src/Layout/Footer/Footer.module.scss
+++ b/starwars-opgave/src/Layout/Footer/Footer.module.scss
@@ -4,4 +4,8 @@
     background-color: black;
     border-top: 3px solid gray;
 
+    p {
+        text-align: center;
+        padding: 20px 0;
+    }
 }
