--- a/starwars-opgave/src/Layout/Header/Header.module.scss
+++ b/starwars-opgave/src/Layout/Header/Header.module.scss
@@ -18,7 +18,12 @@
 
         a {
             text-decoration: none;
-            border-bottom: 2px solid white;
+        }
+
+        
+
+        a:hover {
+            text-decoration: underline;
         }
     }
 }
